# yolov7

./: README.md  pyproject.toml  requirements.txt
src/yolov7/: test.py  train.py  train_aux.py
src/yolov7.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/yolov7/models/: common.py  experimental.py
src/yolov7/utils/wandb_logging/: wandb_utils.py
